<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/evaluation"
            android:title="@string/evaluation"
            android:icon="@drawable/ic_themes"/>

        <item
            android:id="@+id/progress"
            android:title="@string/progrees"
            android:icon="@drawable/ic_activities"/>

        <item
            android:id="@+id/forum"
            android:title="@string/forum"
            android:icon="@drawable/ic_glossary"/>

        <item
            android:id="@+id/games"
            android:title="@string/games"
            android:icon="@drawable/ic_games_black_24dp"/>

        <item
            android:id="@+id/about"
            android:title="Acerca de"
            android:icon="@drawable/ic_info"
            />
    </group>

</menu>
