<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.afdroid.mi.prueba_menu.com.first.afdroid.mi.prueba_menu.Register"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/register"
        android:id="@+id/editText"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/txtEmailSingUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/txtPassSingUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:layout_gravity="center"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnSignUp"
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@android:color/holo_blue_light"
        />

    <Button
        android:id="@+id/btnCancel"
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="Canceld"
        android:textColor="@android:color/holo_blue_light"
        tools:ignore="OnClick" />

</LinearLayout>